[package]
name = "defrag"
version = "0.1.1"
description = "safe and low overhead memory manager for microcontrollers"
repository = "https://github.com/vitiral/defrag-rs"
keywords = ["embedded", "memory", "manager", "microcontroller"]
authors = ["Garrett Berg <vitiral@gmail.com>"]
readme = "README.md"
license = "MIT"

[dev-dependencies]
rand = "0.3"
stopwatch = "0.0.7"
